--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ li.nav-item{
   background:#ffffff;
   color:#4a4a4a;
 }
+.carousal-padding-0{
+  padding: 0;
+}
 #carouselExampleIndicators{
   height: 100%;
 }
