--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,21 @@ img.d-block.w-100 {
     .term-main-area{
     width: 90% !important;
   }
+  .stage {
+      background: url(../img/stageM.png) !important;
+      background-size: 100% 100% !important;
+      background-repeat: no-repeat !important;
+      padding-top: 53% !important;
+      padding-bottom: 15% !important;
+       padding-left: 33%;
+
+  }
+  .doorStation {
+        width: 168px !important;
+    height: 170px !important;
+    position: relative;
+
+  }
 }
 /*
 // Small devices (landscape phones, 576px and up)*/
@@ -109,6 +124,19 @@ img.d-block.w-100 {
   .term-main-area{    
     width: 90% !important;
   }
+  .doorStation {
+    width: 260px !important;
+    height: 185px !important;    
+    position: relative;
+  }
+  .stage {
+      background: url(../img/stageM.png) !important;
+      background-size:100% 100% !important;
+      background-repeat: no-repeat !important;
+      padding-top: 53% !important;
+      padding-bottom: 15% !important;
+      padding-left: 31%;
+  }
   }
 /*
 // Medium devices (tablets, 768px and up)*/
@@ -116,10 +144,10 @@ img.d-block.w-100 {
   .nav-only-cell{
   display: block !important;
   }
+
   .captcha-container{
     max-width: 100%
-  }
-
+  } 
  }
 /*
 // Large devices (desktops, 992px and up)*/
@@ -128,8 +156,9 @@ img.d-block.w-100 {
     padding-bottom: 5%;
   }
   .main-area{
-    margin-top:2%;
+    margin-top:8%;
   }
+ 
  }
 /*
 // Extra large devices (large desktops, 1200px and up)*/
@@ -138,7 +167,7 @@ img.d-block.w-100 {
     padding-bottom: 5%;
   }
   .main-area{
-    margin-top:2%;
+    margin-top:8%;
   }
 }
 
@@ -167,3 +196,44 @@ input::placeholder{
     padding: 5px 36px;
     text-align: center;
 }
+
+
+
+/* Gift Page */
+ .doorStation{
+    width: 370px;
+    height: 279px;
+    position: relative;
+
+  }
+   .doorStation .opendoor{
+   background: url(../img/open.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%
+  }
+  .doorStation .closedoor{
+    background:url('../img/close.png');
+      background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%
+  }
+  .prize{
+   background:url('../img/prize.png');
+      background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 5%;
+    width: 5%; 
+        position: absolute;
+    top: 50%;
+    left: 44%;
+    opacity: 0;
+  }
+  .stage{
+    background: url(../img/stage.png);
+    background-size: 100% 100%;
+        padding-top: 20%;
+    padding-bottom: 5%;
+  }
